# diffusion-influence

./: .gitignore  LICENSE  README.md  pyproject.toml
diffusion_influence/: compressor.py  config_schemas.py  constructors.py  data_utils.py  influence.py  iter_utils.py  lds.py  linear_operators.py  measurements.py  omegaconf_resolvers.py  optim_utils.py  pipelines.py  quantization.py  score_calculator.py  svd_compression.py  torch_fileloader.py  transforms.py
diffusion_influence/data/: artbench.py  cifar.py
diffusion_influence/diffusion/: elbo.py  latent_diffusion_utils.py  losses.py  train_util.py
diffusion_influence/diffusion_trak/: gradient_computers.py  modelout_functions.py  utils.py
diffusion_influence/likelihood/: likelihood.py  sde_interface.py
notebooks/: lds_score_plots.ipynb
scripts/: compute_clip_embedding_similarity_scores.py  compute_clip_embedding_similarity_scores_between_samples.py  compute_influence.py  compute_measure_function.py  compute_trak_unconditional.py  download_artbench.py  generate_retrain_idxs.py  generate_retrain_without_top_influences_idxs.py  lds_score.py  retrain_correlation_plot.py  sample_and_save_trajectory.py  sample_unconditional.py  train_unconditional.py
scripts/configs/: artbench_unconditional_ldm.yaml  cifar10_ddpm.yaml  cifar10deq_ddpm.yaml  cifar2_ddpm.yaml  cifar2deq_ddpm.yaml  compute_clip_embedding_similarity_scores.yaml  compute_clip_embedding_similarity_scores_between_samples.yaml  compute_influence_default.yaml  compute_influence_ekfac_cifar2.yaml  compute_lds_score_default.yaml  compute_trak_default.yaml
scripts/configs/wandb/: base.yaml
scripts/model_configs/: README.md  unet_artbench.json  unet_cifar10.json  unet_cifar2.json
scripts/plots/: README.md  damping_ablation.py  plot_damping_ablation_figure.py
(+12 files in other folders)
